--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "phpbb/epv": "dev-master"
     },
     "extra": {
-        "display-name": "Board Tools",
+        "display-name": "Board Tools Extension",
         "soft-require": {
             "phpbb/phpbb": ">=3.1.0"
         }
