--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,14 @@
 {
     "name": "xtreamwayz/tools",
     "type": "phpbb-extension",
-    "description": "Board Tools Extension for phpBB 3.1",
+    "description": "Board Tools Extension for phpBB 3.1 - DEPRECATED",
     "homepage": "https://github.com/xtreamwayz/phpbb-ext-tools",
     "version": "1.0.0",
     "time": "2014-11-01",
-    "license": "GPL-2.0",
+    "license": "MIT",
     "authors": [{
         "name": "Geert Eltink",
-        "homepage": "https://xtreamwayz.github.io/",
+        "homepage": "https://xtreamwayz.com/",
         "role": "Lead Developer"
     }],
     "require": {
